2022-12-19_daktela_kubernetes/kubernetes-training/statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world-sts
spec:
  clusterIP: None
  selector:
    app: hello-world-sts
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hello-world
  annotations:
    kubernetes.io/change-cause: green
spec:
  serviceName: hello-world
  selector:
    matchLabels:
      app: hello-world-sts
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world-sts
        svc: example
    spec:
      containers:
        - name: hello-world
          image: ondrejsika/training-example:blue
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
