2022-12-19_daktela_kubernetes/kubernetes-training/ingress-paths-do.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers-paths
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  tls:
    - secretName: webservers-tls
  rules:
    - host: lab0.sikademo.com
      http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
