2022-12-19_daktela_kubernetes/kubernetes-training/init_containers.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    project: counter
spec:
  serviceName: redis
  selector:
    matchLabels:
      project: counter
      app: redis
  template:
    metadata:
      labels:
        project: counter
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
            requests:
              cpu: 30m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 80Mi
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    project: counter
spec:
  selector:
    project: counter
    app: redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  annotations:
    app.openshift.io/connects-to: |
      [{"apiVersion":"apps/v1","kind":"StatefulSet","name":"redis"}]
  labels:
    project: counter
spec:
  selector:
    matchLabels:
      project: counter
      app: counter
  replicas: 10
  template:
    metadata:
      labels:
        project: counter
        app: counter
    spec:
      containers:
        - name: counter
          image: ondrejsika/counter
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 60Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: counter
  labels:
    project: counter
spec:
  selector:
    project: counter
    app: counter
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
spec:
  rules:
    - host: counter.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
